--- a/formulario.html
+++ b/formulario.html
@@ -621,8 +621,10 @@
         <!-- /.row -->
         <div class="row">
         	<h2 class="text-center">Nombre maskota</h2>
-        	<h3 class="text-center">Fecha 12-enero-2015</h3>
+        	<h4 class="text-center">Fecha 12-enero-2015</h4>
+        	<div class="espaciado"></div>
         	<hr>
+        	<div class="espaciado"></div>
         	<h4 class="text-center">Datos del solicitante:</h4>
 			        <form>
                       <div class="form-group">
@@ -653,7 +655,7 @@
                         <label for="fecha">Escribe brevemente qué es para ti ser un <strong>Dueño Responsable</strong></label>
                         <textarea class="form-control" rows="3" placeholder="Escribe"></textarea>
                       </div>
-                      Declaro que:
+                      <p>Declaro que:</p>
                       	<p>Quiero iniciar un proceso para adoptar a una mascota de +Amor.</p>
                       	<p>Autorizo que me contacten y/o visiten para entrevistas acerca de la adopción</p> 
 							<p>En caso que proceda la adopción, pagaré una cuota de recuperación de $400.00 (cuatrocientos pesos 00/100 M.N.).</p> 
@@ -666,8 +668,10 @@
                         </label>
                       </div>
                        <p>Para cualquier duda, contáctanos en <a href="mailto:masamor@maskota.com.mx">masamor@maskota.com.mx</a></p>
+                       <div class="espaciado"></div>
                       <button type="submit" class="btn btn-primary">Enviar</button>
                     </form> 
+                    <div class="espaciado"></div>
         </div>
 
         <!-- /.row -->
