--- a/perro.html
+++ b/perro.html
@@ -659,6 +659,14 @@
         </div>
 
         <!-- /.row -->
+        <div class="row">
+        	<div class="col-lg-12">
+                <h3 class="page-header">Descripción</h3>
+            </div>
+            <div class="col-lg-12">
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet, felis vel pellentesque congue, urna urna mollis lacus, nec venenatis purus nunc sit amet risus. Sed quis nisl et nulla aliquam venenatis. Ut fringilla magna in ullamcorper auctor. Suspendisse malesuada suscipit ex, et fringilla enim laoreet in. Vestibulum non interdum justo. Duis vitae nulla sit amet urna condimentum rhoncus vel aliquam justo. Phasellus nec tortor purus. Mauris condimentum id erat non molestie. Proin neque orci, finibus et erat a, bibendum mattis libero.</p>
+            </div>
+        </div>
 
                 <!-- Related Projects Row -->
         <div class="row">
